--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -623,6 +623,7 @@ width: 25%;
     cursor: pointer;
 }
 
+/* Surface Pro 7 */
 @media screen and (max-width:1400px) and (max-height:950px) {
 
     #logoSvg {
@@ -683,6 +684,19 @@ width: 25%;
         width: 22%;
     }
 
+    tr>th {
+        font-size: 120%;
+    }
+
+    tr>td {
+        width: 10%;
+    }
+
+    input[type="radio"] {
+        height: 2vh;
+        width: 40%;
+    }
+
     #class35, #class65, #class300, #class550, #class1000 {
         font-size: 75%;
         width: 15%;
@@ -713,6 +727,7 @@ width: 25%;
     }
 }
 
+/* Nest Hub Max */
 @media screen and (max-width:1280px) and (max-height:800px) {
 
     #links a, #links button {
@@ -902,7 +917,7 @@ width: 25%;
     }
 
     #offersDiv {
-        height: 51vh;
+        height: 52uvh;
     }
 
     #offersDiv hr {
@@ -990,6 +1005,7 @@ width: 25%;
     }
 }
 
+/* iPad Air */
 @media screen and (max-width:1200px) and (max-height:850px) {
 
     #logoSvg {
@@ -1100,6 +1116,7 @@ width: 25%;
     
 }
 
+/* iPad Mini */
 @media screen and (max-width:1050px) and (max-height:800px) {
     #links a, #links button {
         margin: 0 20px 0;
@@ -1129,6 +1146,10 @@ width: 25%;
         font-size: 103%;
     }
 
+    #typeDiv {
+        height: 50.7vh;
+    }
+
     .type p {
         font-size: 75%;
     }
@@ -1137,13 +1158,27 @@ width: 25%;
         font-size: 70%;
     }
 
+    #switchBtn {
+        bottom: 10px;
+        height: 30px;
+    }
+
+    #carousel {
+        overflow: hidden;
+        background: black;
+        border: 1px solid teal;
+        border-radius: 5px;
+        width: 50%;
+        height: 52vh;
+    }
+
+    #offersDiv {
+        height: 50vh;
+    }
+    
     #class35, #class65, #class300, #class550, #class1000 {
-        font-size: 75%;
-        border-radius: 3px;
-        height: 20px;
-        margin: -5px -5px 5px;
-        width: 18%;
-        box-shadow: -2px -2px 1px silver;
+        height: 21px;
+        width: 17%;
     }
 
     #offersDiv hr {
@@ -1154,8 +1189,8 @@ width: 25%;
         font-size: 80%;
     }
 
-    table td {
-        font-size: 80%;
+    tr>td {
+        line-height: 25px;
     }
 
     input[type="radio"] {
@@ -1174,6 +1209,7 @@ width: 25%;
     }    
 }
 
+/* Nest Hub */
 @media screen and (max-width:1050px) and (max-height:600px) {
 
     #title {
@@ -1208,14 +1244,17 @@ width: 25%;
         font-size: 60%;
         border-radius: 3px;
         height: 20px;
-        margin: -5px -5px 5px;
-        width: 18%;
+        width: 16%;
         box-shadow: -2px -2px 1px silver;
     }
 
     #offersDiv hr {
         height: 0px;
         margin-top: 10px;
+    }
+
+    tr>td {
+        line-height: 10px;
     }
 
     #scheduleBtnDiv {
@@ -1328,6 +1367,7 @@ width: 25%;
 
 }
 
+/* Surface Pro 7 */
 @media screen and (max-width:950px) and (max-height:1400px) {
     nav {
         height: 5vh;
@@ -1500,7 +1540,11 @@ width: 25%;
     #offersDiv {
         order: 2;
         width: 45%;
-        height: 30vh;
+        height: 35vh;
+    }
+
+    input[type="radio"] {
+        height: 1vh;
     }
 
     #typeDiv {
@@ -1508,8 +1552,8 @@ width: 25%;
         width: 45%;
         margin-top: 0;
         padding-bottom: 70px;
-        height: 27vh;
-        border-radius: 12px;
+        height: 31.8vh;
+        border-radius: 3px;
     }
 
     .type p {
@@ -1534,6 +1578,7 @@ width: 25%;
     }
 }
 
+/* Samsung Galaxy S20 Ultra, A51, 71*/
 @media screen and (max-width:950px) and (max-height:450px) {
 
     body {
@@ -1704,6 +1749,7 @@ width: 25%;
     }
 }
 
+/* iPhone XR */
 @media screen and (max-width:900px) and (max-height:450px) {
 
     #logoSvg {
@@ -1849,7 +1895,7 @@ width: 25%;
     #title {
         border-radius: 5px;
         margin: 27px 20px 0 auto;
-        width: 68.5%;
+        width: 68%;
     }
 
     #title h1 {
@@ -1929,7 +1975,7 @@ width: 25%;
     #offersDiv {
         order: 3;
         width: 23%;
-        height: 52vh;
+        height: 54vh;
         border-radius: 5px;
     }
 
@@ -1990,6 +2036,7 @@ width: 25%;
     
 }
 
+/* Pixel 5 */
 @media screen and (max-width:900px) and (max-height:400px) {
 
     #logoSvg {
@@ -2006,6 +2053,10 @@ width: 25%;
         height: 175px;
     }
 
+    #title {
+        width: 67.8%;
+    }
+
     #typeDiv {
         padding-bottom: 10px;
         height: 50vh;
@@ -2020,12 +2071,12 @@ width: 25%;
     }
 
     #offersDiv {
-        height: auto;
-        height: 49vh;
+        height: 52.3vh;
     }
 
     tr th {
         font-size: 65%;
+        line-height: 0px;
     }
 
     input[type="radio"] {
@@ -2049,6 +2100,7 @@ width: 25%;
     }
 }
 
+/* iPad Air */
 @media screen and (max-width: 850px) and (max-height: 1200px) {
 
     #logoSvg {
@@ -2093,6 +2145,19 @@ width: 25%;
         height: 30vh;
     }
 
+    tr>td {
+        line-height: 5px;
+    }
+
+    input[type="radio"] {
+        height: 1vh;
+        width: 25%;
+    }
+
+    #scheduleBtn {
+        font-size: 110%;
+    }
+
     #typeDiv {
         order: 3;
         width: 45%;
@@ -2127,6 +2192,7 @@ width: 25%;
     }
 }
 
+/* iPhone 12 Pro */
 @media screen and (max-width:850px) and (max-height:400px) {
 
     #ship {
@@ -2137,13 +2203,13 @@ width: 25%;
     }
 
     #links a, #links button {
-        margin: 0px 15px 0 0;
+        margin: 0px 25px 0 0;
         font-size: 95%;
     }
 
     #title {
         margin: 30px 20px 0 auto;
-        width: 67%;
+        width: 66.3%;
     }
 
     main {
@@ -2154,7 +2220,7 @@ width: 25%;
         order: 1;
         width: 25%;
         padding-bottom: 0px;
-        height: auto;
+        height: 53vh;
         border-radius: 5px;
     }
 
@@ -2186,7 +2252,7 @@ width: 25%;
     #offersDiv {
         order: 3;
         width: 25%;
-        height: auto;
+        height: 53vh;
     }
 
     tr th {
@@ -2231,6 +2297,7 @@ width: 25%;
 
 }
 
+/* iPad Mini */
 @media screen and (max-width:800px) and (max-height:1100px) {
 
     nav {
@@ -2271,6 +2338,15 @@ width: 25%;
         height: 35vh;
     }
 
+    tr>td {
+        line-height: 0;
+    }
+
+    #scheduleBtn {
+        border-radius: 3px;
+        font-size: 100%;
+    }
+
     #typeDiv {
         height: 30.5vh;
     }
@@ -2284,7 +2360,7 @@ width: 25%;
     }
 
     .type p {
-        font-size: 115%;
+        font-size: 100%;
     }
 
     .modal-content {
@@ -2301,6 +2377,7 @@ width: 25%;
 
 }
 
+/* Surface Duo */
 @media screen and (max-width:750px) and (max-height:550px) {
 
     nav {
@@ -2374,7 +2451,12 @@ width: 25%;
 
     #switchBtn {
         bottom: 8px;
-        height: 28px;
+        height: 20px;
+        line-height: -2;
+    }
+
+    #switchBtn>button {
+        font-size: 100%;
     }
 
     #carousel {
@@ -2397,25 +2479,28 @@ width: 25%;
     }
 
     #class35, #class65, #class300, #class550, #class1000 {
-        font-size: 50%;
         font-weight: 600;
-        width: 20%;
-        height: 8%;
         border-radius: 3px;
+        font-weight: 600;
         margin: 0 -10px;
+        font-size: 50%;
+        width: 16%;
+        height: 6%;
+        margin: unset;
     }
-
-    table th {
+    
+    tr>th {
         font-size: 55%;
     }
 
     input[type="radio"] {
         height: 9px;
-        width: 10px;
+        width: 8px;
     }
 
     #scheduleBtnDiv {
-        margin-top: 0px;
+        width: 90%;
+        margin-top: 0;
     }
 
     #scheduleBtn {
@@ -2441,6 +2526,7 @@ width: 25%;
     }
 }
 
+/* Samsung Galaxy S8+ */
 @media screen and (max-width:750px) and (max-height:400px) {
 
     nav {
@@ -2665,6 +2751,7 @@ width: 25%;
 
     table th {
         font-size: 45%;
+        line-height: 0;
     }
 
     tr td {
@@ -2701,6 +2788,7 @@ width: 25%;
     }
 }
 
+/* iPhone SE */
 @media screen and (max-width:700px) and (max-height:400px) {
 
 
@@ -2883,7 +2971,7 @@ width: 25%;
 
     #title {
         margin: 30px 2.3% 0px auto;
-        width: 69.5%;
+        width: 68.8%;
         border-radius: 5px;
     }
 
@@ -2931,7 +3019,7 @@ width: 25%;
     #offersDiv {
         order: 3;
         width: 23%;
-        height: 50vh;
+        height: 55vh;
         border-radius: 5px;
     }
 
@@ -2939,9 +3027,8 @@ width: 25%;
         font-size: 45%;
         font-weight: 500;
         width: 16%;
-        height: 10%;
+        height: 5%;
         border-radius: 3px;
-        margin: 0 -2px 5px;
         box-shadow: -2px -2px 2px silver;
     }
 
@@ -2951,7 +3038,7 @@ width: 25%;
     }
 
     tr {
-        line-height: 0px;
+        line-height: 0;
     }
 
     tr>th {
@@ -2964,23 +3051,20 @@ width: 25%;
     }
 
     input[type="radio"] {
-        width: 35%;
+        width: 30%;
         padding: 0;
         margin: 0;
         height: 14px;
     }
 
+    #scheduleBtnDiv {
+        width: 90%;
+    }
+
     #scheduleBtn {
-        height: 0%;
-        width: 100%;
-        font-size: 80%;
-        font-weight: 900;
-        padding-top: 7px;
+        font-size: 70%;
         border-radius: 3px;
-        border: 1px solid silver;
-        justify-content: space-evenly;
-        box-shadow: -2px -2px 1px silver;
-        text-shadow: -1px -1px 1px silver;
+        width: 100%;
     }
 
     #carousel {
@@ -3005,6 +3089,7 @@ width: 25%;
 
 }
 
+/* Galaxy Fold */
 @media screen and (max-width:700px) and (max-height:300px) {
     nav {
         height: 15vh;
@@ -3037,7 +3122,7 @@ width: 25%;
         width: 23%;
         padding: 0px;
         height: 50vh;
-        border-radius: 5px;
+        border-radius: 3px;
     }
 
     #titleDiv {
@@ -3055,18 +3140,21 @@ width: 25%;
 
     #carousel {
         height: 50vh;
+        width: 47%;
+        border-radius: 3px;
     }
 
     #class35, #class65, #class300, #class550, #class1000 {
         border-radius: 3px;
-        margin: 0 -2px 5px;
+        /* margin: 0 -2px 5px; */
         box-shadow: -1px -1px 1px silver;
         font-size: 35%;
         height: 10%;
     }
 
     input[type="radio"] {
-        height: 5px;
+        height: 2vh;
+        width: 29%;
     }
 
     #offersDiv hr {
@@ -3075,10 +3163,17 @@ width: 25%;
 
     tr>th {
         font-size: 45%;
+        line-height: .6;
+    }
+
+    tr>td {
+        width: 5%;
+        padding: 0;
     }
 
     #offersDiv {
-        height: 40vh;
+        height: 48vh;
+        border-radius: 3px;
     }
 
     #scheduleBtnDiv {
@@ -3087,8 +3182,7 @@ width: 25%;
 
     #scheduleBtn {
         width: 90%;
-        font-size: 70%;
-        padding-top: 0px;
+        font-size: 52%;
         border-radius: 3px;
         box-shadow: -1px -1px 1px silver;
     }
@@ -3345,6 +3439,7 @@ width: 25%;
     }
 }
 
+/* Surface Duo */
 @media screen and (max-width:550px) and (max-height:750px) {
 
     body {
@@ -3564,7 +3659,7 @@ width: 25%;
         order: 3;
         width: 45%;
         padding: 3px;
-        height: 50%;
+        height: 51%;
         margin: 0px auto;
         border-radius: 3px;
         border: 1px solid teal;
@@ -3686,6 +3781,7 @@ width: 25%;
     }
 }
 
+/* iPhone XR */
 @media screen and (max-width:450px) and (max-height:950px) {
 
     nav {
@@ -3741,7 +3837,10 @@ width: 25%;
     }
 
     #links a:hover, #links button:hover {
-        filter: brightness(1.3);
+    }
+
+    #syllabus {
+        width: 95%;
     }
 
     #syllabus div {
@@ -3766,16 +3865,15 @@ width: 25%;
     main {
         margin: 0px auto;
         width: 100%;
-        flex-direction: column;
+        flex-direction: row;
     }
 
     #typeDiv {
         width: 82%;
-        border-radius: 12px;
         margin: 10px auto 100px;
         order: 3;
         border: 2px solid silver;
-        border-radius: 12px;
+        border-radius: 3px;
         padding: 5px;
         height: 35vh;
     }
@@ -3790,7 +3888,7 @@ width: 25%;
     }
 
     #carousel {
-        border-radius: 8px;
+        border-radius: 3px;
         width: 85%;
         margin: 30px auto;
         order: 2;
@@ -3800,13 +3898,13 @@ width: 25%;
         width: 80%;
         margin: 10px auto;
         order: 1;
-        border-radius: 8px;
+        border-radius: 3px;
         border: 2px solid silver;
         height: fit-content;
     }
 
     #class35, #class65, #class300, #class550, #class1000 {
-        font-size: 70%;
+        font-size: 80%;
         width: 15%;
         height: 25px;
         border-radius: 5px;
@@ -3818,11 +3916,10 @@ width: 25%;
     }
 
     #scheduleBtn {
-        border-radius: 8px;
-        width: fit-content;
+        border-radius: 3px;
+        width: 100%;
         margin: 0 auto 10px;
-        padding: 10px;
-        font-size: 1.2rem;
+        font-size: 100%;
     }
 
     #logoCir {
@@ -3845,6 +3942,11 @@ width: 25%;
         font-size: 0.7rem;
     }
 
+    input[type="radio"] {
+        height: 2vh;
+        width: 30%;
+    }
+
     .modal-content {
         width: 95%;
         height: 100vh;
@@ -3863,7 +3965,12 @@ width: 25%;
     }
 }
 
+/* Pixel 5 */
 @media screen and (max-width:400px) and (max-height:900px) {
+
+    main {
+        height: 100vh;
+    }
 
     #scheduleBtn {
         padding: 5px 10px;
@@ -3881,6 +3988,7 @@ width: 25%;
     }
 }
 
+/* iPhone SE */
 @media screen and (max-width:400px) and (max-height:750px) {
 
     body {
@@ -3913,7 +4021,11 @@ width: 25%;
     }
 
     #links a:hover, #links button:hover {
-        filter: brightness(2.5);
+    }
+
+    main {
+        margin: 0px auto;
+        width: 100%;
     }
 
     #syllabus {
@@ -3995,6 +4107,7 @@ width: 25%;
     }
 }
 
+/* Galaxy Fold */
 @media screen and (max-width:300px) and (max-height:700px) {
 
     body {
@@ -4029,8 +4142,9 @@ width: 25%;
     #syllabus div {
         font-size: .5rem;
         padding: 5px;
-        width: 48%;
+        width: 40%;
         border: 1px solid teal;
+        border-radius: 3px;
     }
 
     #class35, #class65, #class300, #class550, #class1000 {
@@ -4044,6 +4158,11 @@ width: 25%;
     tr>th {
         width: 30%;
         font-size: .9rem;
+    }
+
+    #scheduleBtn {
+        border-radius: 3px;
+        font-size: 100%;
     }
 
     #speechTitle {
@@ -4061,40 +4180,4 @@ width: 25%;
         font-size: 3rem;
     }
 
-}
-
-@media screen and (max-width:700px) and (max-height:300px) {
-    #logo {
-        position: relative;
-        bottom: -24px;
-        left: 30px;
-        transform: rotate(-10deg);
-        z-index: 3;
-    }
-
-    .logo {
-        left: -105px;
-        fill: red;
-    }
-
-    #logo h1 {
-        width: 125px;
-        font-size: .5rem;
-    }
-
-    #logo div {
-        width: 30%;
-        height: 12px;
-        font-size: .5rem;
-        position: relative;
-        left: 27px;
-    }
-
-    #logoCir {
-        position: absolute;
-        bottom: -60px;
-        left: 20px;
-        width: 190px;
-        height: 100px;
-    }
 }
