--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 body {
     margin: 0;
     background-image: url('../images/bg1.png');
@@ -6,6 +5,30 @@ body {
 
 body::-webkit-scrollbar {
     display: none;
+}
+
+#freeSessionDiv {
+    background: yellow;
+    text-align: center;
+    border-bottom: 2px solid white;
+    font-weight: 900;
+    font-size: 1.5vw;
+    opacity: 0.5;
+    display: grid;
+    grid-template-columns: repeat(33%, 3);
+}
+
+#freeSession {
+    grid-area: 1/2/1/3;
+    text-align: center;
+}
+
+#closeFree {
+    grid-area: 1/3/1/4;
+    text-align: right;
+    margin-right: 10px;
+    color: red;
+    font-size: 1.2vw;
 }
 
 nav {
@@ -456,10 +479,10 @@ tr>td {
 }
 
 input[type="radio"] {
-    
-height: 2vh;
-    
-width: 25%;
+
+    height: 2vh;
+
+    width: 25%;
 }
 
 .class35 {
@@ -558,7 +581,10 @@ width: 25%;
     text-shadow: 0px 0px 5px black, -2px 2px 1px silver;
 }
 
-#scheduleBtnDiv {height: fit-content;width: 90%;}
+#scheduleBtnDiv {
+    height: fit-content;
+    width: 90%;
+}
 
 
 .myModal {
@@ -633,11 +659,11 @@ width: 25%;
     #ship {
         top: -55px;
     }
-    
+
     #speechTitle {
         font-size: 150%;
     }
-    
+
     .type p {
         font-size: 100%;
     }
@@ -1152,9 +1178,9 @@ width: 25%;
     }
 
     .modal-content {
-    height: 100vh;
-    width: 85%;
-    padding: 10vh 7.5%;
+        height: 100vh;
+        width: 85%;
+        padding: 10vh 7.5%;
     }
 
     .close {
@@ -1165,7 +1191,7 @@ width: 25%;
         font-size: 4rem;
         font-weight: 900;
     }
-    
+
 }
 
 /* iPad Mini */
@@ -1227,7 +1253,7 @@ width: 25%;
     #offersDiv {
         height: 50vh;
     }
-    
+
     #class35, #class65, #class300, #class550, #class1000 {
         height: 21px;
         width: 17%;
@@ -1250,15 +1276,15 @@ width: 25%;
     }
 
     .modal-content {
-    height: 100vh;
-    width: 60%;
-    padding: 10vh 20%;
-    margin: 0;
+        height: 100vh;
+        width: 60%;
+        padding: 10vh 20%;
+        margin: 0;
     }
 
     .calendly-inline-widget {
         height: 85vh !important;
-    }    
+    }
 }
 
 /* Nest Hub */
@@ -1410,8 +1436,8 @@ width: 25%;
     }
 
     .modal-content {
-    width: 60%;
-    padding: 15vh 20%;
+        width: 60%;
+        padding: 15vh 20%;
     }
 
     .close {
@@ -1798,8 +1824,9 @@ width: 25%;
         top: -10px;
     }
 
-    .calendly-inline-widget{
-        height: 80vh !important;;
+    .calendly-inline-widget {
+        height: 80vh !important;
+        ;
     }
 }
 
@@ -2084,10 +2111,11 @@ width: 25%;
         right: 20px;
     }
 
-    .calendly-inline-widget{
-        height: 80vh !important;;
+    .calendly-inline-widget {
+        height: 80vh !important;
+        ;
     }
-    
+
 }
 
 /* Pixel 5 */
@@ -2150,8 +2178,7 @@ width: 25%;
         border-radius: 5px;
     }
 
-    .close {
-    }
+    .close {}
 }
 
 /* iPad Air */
@@ -2230,18 +2257,18 @@ width: 25%;
     }
 
     .modal-content {
-    height: 100vh;
-    width: 70%;
-    padding: 15vh 15%;
-    margin-top: 0;
+        height: 100vh;
+        width: 70%;
+        padding: 15vh 15%;
+        margin-top: 0;
     }
 
     .close {
-    top: 5vh;
-    right: 10%;
+        top: 5vh;
+        right: 10%;
     }
 
-    .calendly-inline-widget{
+    .calendly-inline-widget {
         height: 90vh !important;
     }
 }
@@ -2542,7 +2569,7 @@ width: 25%;
         height: 6%;
         margin: unset;
     }
-    
+
     tr>th {
         font-size: 55%;
     }
@@ -2564,15 +2591,15 @@ width: 25%;
     }
 
     .modal-content {
-    width: 70%;
-    padding: 15vh 15%;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.615);
+        width: 70%;
+        padding: 15vh 15%;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.615);
     }
 
     .close {
-    right: 6%;
-    top: 3vh;
+        right: 6%;
+        top: 3vh;
     }
 
     .calendly-inline-widget {
@@ -3260,7 +3287,7 @@ width: 25%;
         height: 85px;
         width: 240px;
     }
-    
+
     #ship {
         /* display: none; */
         height: 115px;
@@ -3326,7 +3353,7 @@ width: 25%;
         height: 24px;
         bottom: 7px;
     }
-    
+
     #switchBtn button {
         font-size: 100%;
     }
@@ -3629,45 +3656,59 @@ width: 25%;
     }
 
     .modal-content {
-    .modal-content {
-    width: 50%;
-    padding: 50px 75px;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.615);
-};
-    .modal-content {
-    width: 50%;
-    padding: 50px 75px;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.615);
-};
-    .modal-content {
-    width: 50%;
-    padding: 50px 75px;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.615);
-};
-    .modal-content {
-    width: 50%;
-    padding: 50px 75px;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.615);
-};
-    .modal-content {
-    width: 50%;
-    padding: 50px 75px;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.615);
-};
-    width: 80%;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.615);
-    padding: 12vh 10%;
+        .modal-content {
+            width: 50%;
+            padding: 50px 75px;
+            border-radius: 5px;
+            background-color: rgba(0, 0, 0, 0.615);
+        }
+
+        ;
+
+        .modal-content {
+            width: 50%;
+            padding: 50px 75px;
+            border-radius: 5px;
+            background-color: rgba(0, 0, 0, 0.615);
+        }
+
+        ;
+
+        .modal-content {
+            width: 50%;
+            padding: 50px 75px;
+            border-radius: 5px;
+            background-color: rgba(0, 0, 0, 0.615);
+        }
+
+        ;
+
+        .modal-content {
+            width: 50%;
+            padding: 50px 75px;
+            border-radius: 5px;
+            background-color: rgba(0, 0, 0, 0.615);
+        }
+
+        ;
+
+        .modal-content {
+            width: 50%;
+            padding: 50px 75px;
+            border-radius: 5px;
+            background-color: rgba(0, 0, 0, 0.615);
+        }
+
+        ;
+        width: 80%;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.615);
+        padding: 12vh 10%;
     }
 
     .close {
-    right: 5%;
-    top: 1vh;
+        right: 5%;
+        top: 1vh;
     }
 
     .calendly-inline-widget {
@@ -3730,8 +3771,7 @@ width: 25%;
         box-shadow: -2px -2px 1px #7d7b7b;
     }
 
-    #links a:hover, #links button:hover {
-    }
+    #links a:hover, #links button:hover {}
 
     #syllabus {
         width: 95%;
@@ -3914,8 +3954,7 @@ width: 25%;
         font-weight: 900;
     }
 
-    #links a:hover, #links button:hover {
-    }
+    #links a:hover, #links button:hover {}
 
     main {
         margin: 0px auto;
