--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1424,95 +1424,6 @@ tr>td {
 
 }
 
-/* iPad Mini */
-@media screen and (max-width:1050px) and (max-height:800px) {
-    #links a, #links button {
-        margin: 0 20px 0;
-        font-size: 110%;
-    }
-
-    #title {
-        margin: 90px 2.3% 0px auto;
-        width: 95%;
-    }
-
-    #syllabus {
-        margin: 10px auto;
-        width: 65%;
-    }
-
-    #syllabus div {
-        font-size: 100%;
-        width: 35%;
-    }
-
-    main {
-        margin: 0px auto;
-    }
-
-    #speechTitle {
-        font-size: 1.2rem;
-    }
-
-    #typeDiv {
-        height: 50.7vh;
-    }
-
-    .type p {
-        font-size: 75%;
-    }
-
-    .type button {
-        font-size: 70%;
-    }
-
-    #switchBtn {
-        bottom: 10px;
-        height: 30px;
-    }
-
-    #carousel {
-        overflow: hidden;
-        background: black;
-        border: 1px solid teal;
-        border-radius: 5px;
-        width: 50%;
-        height: 52vh;
-    }
-
-    #offersDiv {
-        height: 50vh;
-    }
-
-    #class35, #class65, #class300, #class550, #class1000 {
-        height: 21px;
-        width: 17%;
-    }
-
-    #offersDiv hr {
-        height: 0px;
-    }
-
-    table th {
-        font-size: 80%;
-    }
-
-    input[type="radio"] {
-        height: 12px;
-    }
-
-    .modal-content {
-        height: 100vh;
-        width: 60%;
-        padding: 10vh 20%;
-        margin: 0;
-    }
-
-    .calendly-inline-widget {
-        height: 85vh !important;
-    }
-}
-
 /* Nest Hub */
 @media screen and (max-width:1050px) and (max-height:600px) {
 
@@ -1782,6 +1693,108 @@ tr>td {
 
     .calendly-inline-widget {
         height: 80vh !important;
+    }
+}
+
+/* iPad Mini */
+@media screen and (max-width:1024px) and (max-height:770px) {
+
+    #logoSvg {
+        top: -45px;
+        left: -150px;
+        height: 170px;
+        width: 430px;
+    }
+
+    #links a, #links button {
+        margin: 0 20px 0;
+        font-size: 110%;
+    }
+
+    #title {
+        margin: 90px 2.3% 0px auto;
+        width: 95%;
+    }
+
+    #syllabus {
+        margin: 10px auto;
+        width: 65%;
+    }
+
+    #syllabus div {
+        font-size: 100%;
+        width: 35%;
+    }
+
+    main {
+        margin: 0px auto;
+    }
+
+    #speechTitle {
+        font-size: 1.2rem;
+    }
+
+    #typeDiv {
+        height: 50.5vh;
+        width: 25%;
+        order: 1;
+    }
+
+    .type p {
+        font-size: 75%;
+    }
+
+    .type button {
+        font-size: 70%;
+    }
+
+    #switchBtn {
+        bottom: 10px;
+        height: 30px;
+    }
+
+    #carousel {
+        overflow: hidden;
+        background: black;
+        border: 1px solid teal;
+        border-radius: 5px;
+        width: 40%;
+        height: 52vh;
+    }
+
+    #offersDiv {
+        order: 2;
+        width: 25%;
+        padding: 15px;
+        height: 48.5vh;
+    }
+
+    #class35, #class65, #class300, #class550, #class1000 {
+        height: 21px;
+        width: 17%;
+    }
+
+    #offersDiv hr {
+        height: 0px;
+    }
+
+    table th {
+        font-size: 80%;
+    }
+
+    input[type="radio"] {
+        height: 12px;
+    }
+
+    .modal-content {
+        height: 100vh;
+        width: 60%;
+        padding: 10vh 20%;
+        margin: 0;
+    }
+
+    .calendly-inline-widget {
+        height: 85vh !important;
     }
 }
 
@@ -2250,7 +2263,7 @@ tr>td {
 
     #links a, #links button {
         margin: 0px 25px 0 0;
-        font-size: 70%;
+        font-size: 0.9rem;
         border-bottom: 3px solid #7d2626;
     }
 
@@ -2265,7 +2278,7 @@ tr>td {
     }
 
     #syllabus {
-        margin: 5px 50px 5px auto;
+        margin: 0px 50px 0px auto;
         width: 65%;
     }
 
@@ -2306,11 +2319,11 @@ tr>td {
     }
 
     .type p {
-        font-size: .5rem;
+        font-size: .55rem;
     }
 
     .type ol {
-        font-size: .5rem;
+        font-size: .53rem;
     }
 
     .type button {
@@ -2349,7 +2362,8 @@ tr>td {
         order: 3;
         height: 51vh;
         border-radius: 3px;
-        width: 24%;
+        width: 23%;
+        padding: 15px 5px;
     }
 
     #offersDiv hr {
@@ -2396,7 +2410,7 @@ tr>td {
         border-radius: 3px;
         box-shadow: -2px -2px 1px silver;
         line-height: 1;
-        font-size: 90%;
+        font-size: 0.7rem;
     }
 
     .modal-content {
@@ -2416,7 +2430,7 @@ tr>td {
 }
 
 /* iPhone XR */
-@media screen and (max-width:900px) and (max-height:450px) {
+@media screen and (max-width:900px) and (max-height:415px) {
 
     #logoSvg {
         top: -3px;
@@ -2550,7 +2564,7 @@ tr>td {
 
     #links a, #links button {
         margin: 0px 25px 0 0;
-        font-size: 75%;
+        font-size: 1rem;
     }
 
     nav {
@@ -2560,7 +2574,7 @@ tr>td {
 
     #title {
         border-radius: 5px;
-        margin: 27px 20px 0 auto;
+        margin: 15px 20px 0 auto;
         width: 68%;
     }
 
@@ -2570,7 +2584,7 @@ tr>td {
 
     #syllabus {
         justify-content: space-between;
-        margin: 5px 60px 5px auto;
+        margin: 0 60px 0 auto;
         width: 55%;
     }
 
@@ -2600,7 +2614,7 @@ tr>td {
         width: 25%;
         margin-top: 0;
         padding-bottom: 70px;
-        height: 38vh;
+        height: 40vh;
         border-radius: 5px;
     }
 
@@ -2609,7 +2623,8 @@ tr>td {
     }
 
     .type p {
-        font-size: 65%;
+        font-size: .6rem;
+        margin: 5px;
     }
 
     .type button {
@@ -2633,7 +2648,7 @@ tr>td {
     #carousel {
         width: 45%;
         order: 1;
-        height: 56vh;
+        height: 58vh;
         margin-bottom: 0;
         border-radius: 5px;
     }
@@ -2641,7 +2656,7 @@ tr>td {
     #offersDiv {
         order: 3;
         width: 23%;
-        height: 54vh;
+        height: 51vh;
         border-radius: 5px;
     }
 
@@ -2872,12 +2887,12 @@ tr>td {
 
     #links a, #links button {
         margin: 0px 25px 0 0;
-        font-size: 70%;
+        font-size: 1rem;
     }
 
     #title {
-        margin: 30px 20px 0 auto;
-        width: 66.3%;
+        margin: 15px 20px 0 auto;
+        width: 68%;
     }
 
     main {
@@ -2888,7 +2903,7 @@ tr>td {
         order: 1;
         width: 25%;
         padding-bottom: 0px;
-        height: 53vh;
+        height: 55vh;
         border-radius: 5px;
     }
 
@@ -2897,7 +2912,7 @@ tr>td {
     }
 
     .type p {
-        font-size: 65%;
+        font-size: .5rem;
     }
 
     #switchBtn {
@@ -2912,7 +2927,7 @@ tr>td {
     #carousel {
         width: 40%;
         order: 2;
-        height: 54.5vh;
+        height: 56.5vh;
         border-radius: 5px;
         margin-bottom: 0px;
     }
@@ -2920,7 +2935,7 @@ tr>td {
     #offersDiv {
         order: 3;
         width: 25%;
-        height: 53vh;
+        height: 49vh;
     }
 
     tr th {
@@ -2988,7 +3003,7 @@ tr>td {
 
     #links a, #links button {
         margin: 0px 12px 0 0;
-        font-size: 1.2vmax;
+        font-size: 1rem;
         border-bottom: 2px solid #7d2626;
         border-radius: 2px;
         filter: brightness(2);
@@ -3027,8 +3042,17 @@ tr>td {
         font-size: 150%;
     }
 
+    .type h4 {
+        font-size: 1rem;
+        margin: 10px 5px;
+    }
+
     .type p {
-        font-size: 100%;
+        font-size: 1rem;
+    }
+
+    .type ol {
+        font-size: .9rem;
     }
 
     .modal-content {
@@ -3125,6 +3149,7 @@ tr>td {
 
     #switchBtn>button {
         font-size: 100%;
+        height: 20px;
     }
 
     #carousel {
@@ -3333,16 +3358,16 @@ tr>td {
     }
 
     #links a, #links button {
-        font-size: 70%;
+        font-size: 0.9rem;
     }
 
     #title {
-        margin: 40px 18px 0 auto;
-        width: 68.8%;
+        margin: 20px 18px 0 auto;
+        width: 70%;
     }
 
     #syllabus {
-        margin: 5px 25px 5px auto;
+        margin: 0px 25px 0px auto;
         width: 62%;
     }
 
@@ -3363,21 +3388,30 @@ tr>td {
     }
 
     #typeDiv {
-        height: 45vh;
+        height: 50vh;
         width: 23%;
     }
 
     #speechTitle {
         font-size: 140%;
-    }
-
-    .type {
-        color: white;
-        font-size: 0.5rem;
+        margin: 0;
     }
 
     .type p {
-        font-size: 100%;
+        font-size: 0.4rem;
+        margin-bottom: 0px;
+    }
+
+    .type ol {
+        font-size: .4rem;
+    }
+    .type h4 {
+        font-size: .6rem;
+        margin: 0 0 5px;
+    }
+
+    .type p {
+        font-size: .5rem;
         margin-bottom: 0px;
     }
 
@@ -3393,15 +3427,17 @@ tr>td {
     }
 
     #carousel {
-        height: 46.6vh;
+        height: 52vh;
         width: 45%;
     }
 
     #offersDiv {
-        height: 44.3vh;
+        height: 50vh;
         border-radius: 3px;
+        width: 25%;
+        padding: 5px;
     }
-
+    
     #class35, #class65, #class300, #class550, #class1000 {
         font-size: 50%;
         font-weight: 600;
@@ -3613,8 +3649,8 @@ tr>td {
     }
 
     #links a, #links button {
-        margin: 0px 10px 0 0;
-        font-size: 1.5vmax;
+        margin: 0px 15px 0 0;
+        font-size: 0.8rem;
         border-bottom: 3px solid #7d2626;
         background: none;
     }
@@ -3639,7 +3675,7 @@ tr>td {
 
     #title {
         margin: 30px 2.3% 0px auto;
-        width: 68.8%;
+        width: 70%;
         border-radius: 5px;
     }
 
@@ -3657,11 +3693,22 @@ tr>td {
     }
 
     #speechTitle {
-        font-size: 120%;
+        font-size: .7rem;
+    }
+
+    .type h4 {
+        font-size: .55rem;
+        margin: 0 0 5px;
     }
 
     .type p {
-        font-size: 100%;
+        font-size: .43rem;
+        margin: 8px;
+    }
+
+    .type ol {
+        font-size: .45rem;
+        margin-left: -24px;
     }
 
     .type button {
@@ -3675,7 +3722,7 @@ tr>td {
     #switchBtn {
         position: absolute;
         bottom: 5px;
-        height: 25px;
+        height: 20px;
         overflow: hidden;
         display: flex;
         width: 90%;
@@ -3684,10 +3731,15 @@ tr>td {
         justify-content: space-between;
     }
 
+    #switchBtn>button {
+        font-size: 100%;
+        height: 1.2rem;
+    }
+
     #offersDiv {
         order: 3;
         width: 23%;
-        height: 55vh;
+        height: 49vh;
         border-radius: 5px;
     }
 
@@ -4305,8 +4357,135 @@ tr>td {
     }
 }
 
+/* iPhone 12 Pro Max */
+@media screen and (max-width:435px) and (max-height:935px) {
+    nav {
+        background: black;
+        height: auto;
+        flex-wrap: wrap;
+        position: unset;
+        border-bottom: 2px solid darkgray;
+        /* border-radius: 16px; */
+    }
+
+    #title {
+        display: none;
+    }
+
+    #syllabus {
+        margin: 0px auto;
+        width: 80%;
+    }
+
+    #logoSvg, #asteroid {
+        display: none;
+    }
+
+    #co {
+        width: 100%;
+        color: lightgray;
+        margin: 10px auto 0;
+        padding: 5px;
+        text-align: center;
+        display: block;
+        font-size: 1.65rem;
+        font-style: italic;
+        text-shadow: 0px 0px 1px black, -1px -1px 1px silver;
+    }
+
+    #links {
+        display: flex;
+        justify-content: space-between;
+        width: 85%;
+        padding: 7px 5px;
+        margin: 0 auto;
+    }
+
+    #syllabus {
+        margin: 0px auto;
+        width: 95%;
+    }
+
+    #syllabus div {
+        border-radius: 10px;
+        font-size: 0.5rem;
+    }
+
+    #links a, #links button {
+        margin: 0px 12px 0 0;
+        font-size: 0.69rem;
+        border-bottom: 2px solid #7d2626;
+        border-radius: 2px;
+        filter: brightness(2);
+    }
+
+    #ship, #speed1, #speed2, #speed3 {
+        display: none;
+    }
+
+    main {
+        height: 100vh;
+    }
+
+    #offersDiv {
+        width: 90%;
+        margin: 10px auto;
+        order: 1;
+        border-radius: 3px;
+        border: 2px solid silver;
+        height: fit-content;
+    }
+
+    #carousel {
+        width: 100%;
+        order: 2;
+        height: 32.5vh;
+        border-radius: 5px;
+        margin-bottom: 35px;
+        margin-top: 20px;
+    }
+
+    #carousel img {
+        width: 100%;
+        height: 100%;
+        margin: auto;
+        overflow: hidden;
+    }
+
+    #scheduleBtn {
+        padding: 0px 10px;
+        margin-top: 5px;
+    }
+
+    #typeDiv {
+        width: 95%;
+        margin: 10px auto 100px;
+        order: 3;
+        border: 2px solid silver;
+        border-radius: 0px;
+        padding: 5px;
+        height: 45vh;
+    }
+
+    .type p {
+        font-size: 1rem;
+        margin: 10px;
+    }
+
+    .type ol {
+        font-size: .9rem;
+    }
+}
+
+/* Pixel 7 */
+@media screen and (max-width:415px) and (max-height:920px) {
+    #links a, #links button {
+        font-size: 0.65rem;
+    }
+}
+
 /* iPhone XR */
-@media screen and (max-width:450px) and (max-height:950px) {
+@media screen and (max-width:415px) and (max-height:900px) {
 
     nav {
         background: black;
@@ -4352,7 +4531,7 @@ tr>td {
         color: #0ca1a1;
         margin: 5px 0 10px 0;
         border-radius: 3px;
-        font-size: .65vmax;
+        font-size: .6rem;
         font-weight: 600;
         border: 1px solid;
         padding: 4px;
@@ -4399,7 +4578,7 @@ tr>td {
         border: 2px solid silver;
         border-radius: 3px;
         padding: 5px;
-        height: 35vh;
+        height: 50vh;
     }
 
     .type {
@@ -4511,8 +4690,40 @@ tr>td {
     }
 }
 
+/* iPhone 12 Pro */
+@media screen and (max-width:400px) and (max-height:850px) {
+
+    main {
+        height: 100vh;
+    }
+
+    #scheduleBtn {
+        padding: 5px 10px;
+    }
+
+    #typeDiv {
+        width: 82%;
+        border-radius: 12px;
+        margin: 10px auto 100px;
+        order: 3;
+        border: 2px solid silver;
+        border-radius: 12px;
+        padding: 5px;
+        height: 50vh;
+    }
+
+    .type p {
+        font-size: 1rem;
+        margin: 10px;
+    }
+
+    .type ol {
+        font-size: .9rem;
+    }
+}
+
 /* iPhone SE */
-@media screen and (max-width:400px) and (max-height:750px) {
+@media screen and (max-width:400px) and (max-height:700px) {
 
     body {
         overflow: auto;
@@ -4536,7 +4747,7 @@ tr>td {
         background: black;
         color: #0c5663;
         margin: 0px -10px;
-        font-size: 40%;
+        font-size: .53rem;
         padding: 2px 3px;
         filter: brightness(2.5);
         border-radius: 3px;
@@ -4592,7 +4803,7 @@ tr>td {
         border: 2px solid silver;
         border-radius: 12px;
         padding: 5px;
-        height: 39vh;
+        height: 50vh;
     }
 
     #class35, #class65, #class300, #class550, #class1000 {
@@ -4607,8 +4818,18 @@ tr>td {
         font-size: 1.5rem;
     }
 
+    .type h4 {
+        margin-top: 0;
+        margin-bottom: 5px;
+    }
+
     .type p {
-        text-align: center;
+        text-align: left;
+        font-size: .8rem;
+        margin: 5px;
+    }
+
+    .type ol {
         font-size: .8rem;
     }
 
@@ -4626,6 +4847,45 @@ tr>td {
 
     .calendly-inline-widget.calendly-mobile {
         height: 80vh !important;
+    }
+}
+
+/* Samsung Galaxy S8+ */
+@media screen and (max-width:365px) and (max-height:745px) {
+    #links a, #links button {
+        position: relative;
+        z-index: 3;
+        background: black;
+        color: #0ca1a1;
+        margin: 5px 0 10px 0;
+        border-radius: 3px;
+        font-size: 0.55rem;
+        font-weight: 600;
+        box-shadow: none;
+        border: none;
+        border-bottom: 2px solid red;
+        padding: 4px;
+        filter: brightness(1.3);
+    }
+
+    #syllabus div {
+        border: 5px solid teal;
+        border-radius: 12px;
+        padding: 0 25px;
+        background: black;
+        margin: 0 10px;
+        color: white;
+        width: 25%;
+        font-size: .6rem;
+    }
+
+    .type p {
+        font-size: 0.8rem;
+        margin: 10px;
+    }
+
+    .type ol {
+        font-size: 0.86rem;
     }
 }
 
